frontend: fixed minor css issues in the exchange page(s).
1. Added min-height for radio buttons container in the
exchange page to prevent the layout shifting/jumping around

2. Set `guideExists` to be `false` for `<Spinner/>` to fix
"double guide" issue.

--- a/frontends/web/src/routes/buy/exchange.module.css
+++ b/frontends/web/src/routes/buy/exchange.module.css
@@ -92,6 +92,9 @@
     margin-left: calc((var(--space-eight) + var(--space-quarter)));
 }
 
+.radioButtonsContainer {
+    min-height: 180px;
+}
 
 .title {
     font-size: 2rem;
